syntax = "proto3";

package order;

option go_package = "github.com/yourusername/order-service/internal/proto";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
    rpc GetOrderByID(GetOrderRequest) returns (OrderResponse);
    rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
    rpc ListUserOrders(ListOrdersRequest) returns (ListOrdersResponse);
}

message OrderItem {
    string product_id = 1;
    int32 quantity = 2;
    double price = 3;
}

message Order {
    string id = 1;
    string user_id = 2;
    repeated OrderItem items = 3;
    double total = 4;
    string status = 5; // "created", "paid", "shipped", "completed"
    string created_at = 6;
}

message CreateOrderRequest {
    string user_id = 1;
    repeated OrderItem items = 2;
}

message GetOrderRequest {
    string order_id = 1;
}

message UpdateOrderStatusRequest {
    string order_id = 1;
    string status = 2;
}

message ListOrdersRequest {
    string user_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message OrderResponse {
    Order order = 1;
}

message ListOrdersResponse {
    repeated Order orders = 1;
}